--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch ./index.ts",
-    "build": "webpack"
+    "build": "npm install && webpack"
   },
   "keywords": [],
   "author": "",
