--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch ./index.ts",
     "build": "npm install && webpack",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
