fix build issue with start cmd

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/cors": "^2.8.17",
     "@types/pdf-parse": "^1.1.4",
     "ai-pdf-back": "file:",
+    "aws-sdk": "^2.1681.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -32,8 +33,10 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mailersend": "^2.2.0",
+    "mock-aws-s3": "^4.0.2",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.7",
+    "nock": "^13.5.5",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "path": "^0.12.7",
