--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "es6",
     "module": "commonjs",
     "outDir": "./dist",
     "rootDir": "./",
     "esModuleInterop": true,
+    "moduleResolution": "node",
     "strict": false, // Disable strict mode
     "noEmitOnError": false, // Allow emitting files even if there are errors
     "skipLibCheck": true,
     "baseUrl": "./",
+    "forceConsistentCasingInFileNames": true,
     "paths": {
       "@utils/*": ["utils/*"],
       "@controllers/*": ["controllers/*"],
@@ -17,5 +19,6 @@
       "@types/*": ["types/*"]
     }
   },
+  "include": ["./**/*.ts"],
   "exclude": ["node_modules"]
 }
